update: Package model to have license_clarity_score
Signed-off-by: swastik <swastkk@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -188,7 +188,7 @@ scancode_scan =
 # scan plugins and before the output plugins. See also plugincode.post_scan
 # module for details and doc.
 scancode_post_scan =
-    package_summary = summarycode.package_summary:PackageSummary
+    package_summary = packagedcode.plugin_package:PackageSummary
     summary = summarycode.summarizer:ScanSummary
     tallies = summarycode.tallies:Tallies
     tallies-with-details = summarycode.tallies:TalliesWithDetails
