--- a/tests/formattedcode/data/common/manifests-expected.yaml
+++ b/tests/formattedcode/data/common/manifests-expected.yaml
@@ -27,11 +27,11 @@ headers:
     warnings: []
     extra_data:
       system_environment:
-        operating_system: mac
+        operating_system: linux
         cpu_architecture: 64
-        platform: macOS-14.5-x86_64-i386-64bit
-        platform_version: 'Darwin Kernel Version 23.5.0: Wed May  1 20:16:51 PDT 2024; root:xnu-10063.121.3~5/RELEASE_ARM64_T8103'
-        python_version: 3.12.3 (main, Apr  9 2024, 08:09:14) [Clang 15.0.0 (clang-1500.3.9.4)]
+        platform: Linux-5.15.0-112-generic-x86_64-with-glibc2.35
+        platform_version: '#122-Ubuntu SMP Thu May 23 07:48:21 UTC 2024'
+        python_version: 3.10.12 (main, Nov 20 2023, 15:14:05) [GCC 11.4.0]
       spdx_license_list_version: '3.23'
       files_count: 4
 summary:
@@ -139,7 +139,6 @@ packages:
       - manifests/maven/persistence-api-1.0.pom
     datasource_ids:
       - maven_pom
-    license_clarity: []
     purl: pkg:maven/javax.persistence/persistence-api@1.0
   - type: npm
     namespace:
@@ -225,7 +224,6 @@ packages:
       - manifests/npm-license-mapping/package.json
     datasource_ids:
       - npm_package_json
-    license_clarity: []
     purl: pkg:npm/grunt-esvm@3.2.8
   - type: npm
     namespace:
@@ -291,7 +289,6 @@ packages:
       - manifests/npm-license-string/package.json
     datasource_ids:
       - npm_package_json
-    license_clarity: []
     purl: pkg:npm/angular-compare-validator@0.1.1
 dependencies:
   - purl: pkg:npm/bluebird
