--- a/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
+++ b/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
@@ -27,11 +27,11 @@ headers:
     warnings: []
     extra_data:
       system_environment:
-        operating_system: mac
+        operating_system: linux
         cpu_architecture: 64
-        platform: macOS-14.5-x86_64-i386-64bit
-        platform_version: 'Darwin Kernel Version 23.5.0: Wed May  1 20:16:51 PDT 2024; root:xnu-10063.121.3~5/RELEASE_ARM64_T8103'
-        python_version: 3.12.3 (main, Apr  9 2024, 08:09:14) [Clang 15.0.0 (clang-1500.3.9.4)]
+        platform: Linux-5.15.0-112-generic-x86_64-with-glibc2.35
+        platform_version: '#122-Ubuntu SMP Thu May 23 07:48:21 UTC 2024'
+        python_version: 3.10.12 (main, Nov 20 2023, 15:14:05) [GCC 11.4.0]
       spdx_license_list_version: '3.23'
       files_count: 4
 summary:
@@ -119,7 +119,6 @@ packages:
       - package-and-licenses/setup.cfg
     datasource_ids:
       - pypi_setup_cfg
-    license_clarity: []
     purl: pkg:pypi/codebase
 dependencies: []
 license_detections:
