--- a/tests/formattedcode/data/common/manifests-expected.yaml
+++ b/tests/formattedcode/data/common/manifests-expected.yaml
@@ -21,7 +21,7 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 3.1.0
+    output_format_version: 3.2.0
     message:
     errors: []
     warnings: []
@@ -32,7 +32,7 @@ headers:
         platform: Linux-5.15.0-112-generic-x86_64-with-glibc2.35
         platform_version: '#122-Ubuntu SMP Thu May 23 07:48:21 UTC 2024'
         python_version: 3.10.12 (main, Nov 20 2023, 15:14:05) [GCC 11.4.0]
-      spdx_license_list_version: '3.23'
+      spdx_license_list_version: '3.24'
       files_count: 4
 summary:
   declared_license_expression: apache-2.0 AND cddl-1.0 AND mit
@@ -2563,7 +2563,7 @@ files:
         extra_data: {}
         dependencies:
           - purl: pkg:pypi/numpy
-            extracted_requirement: numpy>=1.6
+            extracted_requirement: '>=1.6'
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2572,7 +2572,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/pandas
-            extracted_requirement: pandas>=0.18
+            extracted_requirement: '>=0.18'
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2581,7 +2581,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/deap
-            extracted_requirement: deap
+            extracted_requirement:
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2590,7 +2590,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/efel
-            extracted_requirement: efel>=2.13
+            extracted_requirement: '>=2.13'
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2599,7 +2599,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/ipyparallel
-            extracted_requirement: ipyparallel
+            extracted_requirement:
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2608,7 +2608,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/pickleshare
-            extracted_requirement: pickleshare>=0.7.3
+            extracted_requirement: '>=0.7.3'
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2617,7 +2617,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/jinja2
-            extracted_requirement: Jinja2>=2.8
+            extracted_requirement: '>=2.8'
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2626,7 +2626,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/future
-            extracted_requirement: future
+            extracted_requirement:
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2635,7 +2635,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/pebble
-            extracted_requirement: Pebble>=4.3.10
+            extracted_requirement: '>=4.3.10'
             scope: install
             is_runtime: yes
             is_optional: no
@@ -2644,7 +2644,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/scoop
-            extracted_requirement: scoop>=0.7
+            extracted_requirement: '>=0.7'
             scope: all
             is_runtime: yes
             is_optional: no
@@ -2653,7 +2653,7 @@ files:
             resolved_package: {}
             extra_data: {}
           - purl: pkg:pypi/scoop
-            extracted_requirement: scoop>=0.7
+            extracted_requirement: '>=0.7'
             scope: scoop
             is_runtime: yes
             is_optional: no
