Update deps for go-inspector
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -150,7 +150,7 @@ packages =
     rpm_inspector_rpm >= 4.16.1.3; platform_system == 'Linux'
     regipy >= 3.1.0; platform_system == 'Linux'
     packagedcode_msitools >= 0.101.210706; platform_system == 'Linux'
-    go-inspector ; platform_system == 'Linux'
+    go-inspector >= 0.3.0; platform_system == 'Linux'
 
 
 [options.entry_points]
