--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -100,7 +100,7 @@ install_requires =
     plugincode >= 32.0.0
     publicsuffix2
     pyahocorasick >= 2.0.0
-    pygmars >= 0.7.0
+    pygmars >= 0.9.0
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
@@ -112,7 +112,7 @@ install_requires =
     xmltodict >= 0.11.0
     zipp >= 3.0.0; python_version < "3.9"
     typecode >= 30.0.1
-#    typecode[full] >= 30.0.0
+#    typecode[full] >= 30.0.1
 #    extractcode[full] >= 31.0.0
 
 
@@ -199,6 +199,7 @@ scancode_post_scan =
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
     license-references = licensedcode.licenses_reference:LicenseReference
+    todo = summarycode.todo:AmbiguousDetectionsToDoPlugin
     classify = summarycode.classify_plugin:FileClassifier
 
 
