--- a/setup.cfg
+++ b/setup.cfg
@@ -100,7 +100,7 @@ install_requires =
     plugincode >= 32.0.0
     publicsuffix2
     pyahocorasick >= 2.0.0
-    pygmars >= 0.7.0
+    pygmars >= 0.9.0
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0
@@ -138,9 +138,9 @@ testing =
 
 docs =
     Sphinx == 5.1.0
-    sphinx-rtd-theme >= 0.5.0
-    doc8 >= 0.8.1
+    sphinx_rtd_theme >= 0.5.1
     sphinx-reredirects >= 0.1.2
+    doc8 >= 0.8.1
     sphinx-autobuild
     sphinx-rtd-dark-mode>=1.3.0
     sphinx-copybutton
