--- a/tests/cluecode/data/copyrights/misco/no-copyright_usgo.txt.yml
+++ b/tests/cluecode/data/copyrights/misco/no-copyright_usgo.txt.yml
@@ -2,3 +2,8 @@ what:
   - copyrights
   - authors
   - holders
+copyrights:
+  - copyright United States Government
+holders:
+  - United States Government
+
