Align license and tests with latest copyright
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/authors/author_russ_c-c.c.yml
+++ b/tests/cluecode/data/authors/author_russ_c-c.c.yml
@@ -4,7 +4,9 @@ what:
   - copyrights
   - holders
 copyrights:
+  - Russ Dill <Russ.Dill@asu.edu> 2001-2003
   - Vladimir Oleynik <dzo@simtreas.ru> (c) 2003
 holders:
+  - Russ Dill
   - Vladimir Oleynik
 notes: these are detected as copyrights, not authors
