--- a/tests/cluecode/data/copyrights/name_before_c-c.c.yml
+++ b/tests/cluecode/data/copyrights/name_before_c-c.c.yml
@@ -3,9 +3,14 @@ what:
   - holders
   - holders_summary
 copyrights:
+  - Russ Dill <Russ.Dill@asu.edu> 2001-2003
   - Vladimir Oleynik <dzo@simtreas.ru> (c) 2003
 holders:
+  - Russ Dill
   - Vladimir Oleynik
 holders_summary:
+  - value: Russ Dill
+    count: 1
   - value: Vladimir Oleynik
     count: 1
+
