Correct copyright tests
Adapted trailing is no longer incorrectly detected

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-9-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-9-base/copyright-detailed.expected.yml
@@ -2431,7 +2431,7 @@ copyright: |
   Copyright (c) 2001 Stephen L. Moshier <moshier@na-net.ornl.gov>
   Copyright (c) 1997, 1999 Free Software Foundation, Inc.
   Copyright (c) 1997, 1999, 2002, 2004 Free Software Foundation, Inc.
-  Copyright 1984, 1991 by Stephen L. Moshier Adapted
+  Copyright 1984, 1991 by Stephen L. Moshier
   Copyright (c) 1993 by Sun Microsystems, Inc.
   Copyright (c) 2009 The Go Authors
   Copyright (c) 2004-2007 David Friedman
