Improve copyrights more
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/name_before_c-c.c.yml
+++ b/tests/cluecode/data/copyrights/name_before_c-c.c.yml
@@ -7,10 +7,9 @@ copyrights:
   - Vladimir Oleynik <dzo@simtreas.ru> (c) 2003
 holders:
   - Russ Dill
-  - Vladimir Oleynik
+  - Vladimir Oleynik <dzo@simtreas.ru>
 holders_summary:
   - value: Russ Dill
     count: 1
-  - value: Vladimir Oleynik
+  - value: Vladimir Oleynik <dzo@simtreas.ru>
     count: 1
-
