--- a/tests/cluecode/data/copyrights/misco4/linux3/vrup.txt.yml
+++ b/tests/cluecode/data/copyrights/misco4/linux3/vrup.txt.yml
@@ -1,11 +1,8 @@
 what:
   - copyrights
   - holders
-  - holders_summary
+  - authors
 copyrights:
   - copyright 2008-01-26 11:46 vruppert
 holders:
   - vruppert
-holders_summary:
-  - value: vruppert
-    count: 1
