--- a/tests/cluecode/data/ics/chromium-chrome-common-extensions-docs-examples-extensions-oauth_contacts/NOTICE.yml
+++ b/tests/cluecode/data/ics/chromium-chrome-common-extensions-docs-examples-extensions-oauth_contacts/NOTICE.yml
@@ -10,9 +10,9 @@ copyrights:
 holders:
   - unitedHeroes.net
   - unitedHeroes.net
-  - Paul Johnston - Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet
+  - Paul Johnston Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet
 holders_summary:
   - value: unitedHeroes.net
     count: 2
-  - value: Paul Johnston - Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet
+  - value: Paul Johnston Other contributors Greg Holt, Andrew Kepert, Ydnar, Lostinet
     count: 1
