Improve copyright detection more
Empty lines can stop a notice continuity.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcrypt1/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcrypt1/copyright-detailed.expected.yml
@@ -498,10 +498,10 @@ copyright: |
   Copyright Maarten Bosmans FSF
   Copyright Guido U. Draheim, Maarten Bosmans FSF
   Copyright Mike Frysinger FSF
-  Copyright Scott James Remnant, Dan Nicholson GPL
+  Copyright Scott James Remnant, Dan Nicholson
   Copyright Tim Toolan FSF
   Copyright Philip Withnall FSF
-  Copyright Steven G. Johnson, Daniel Richard G. GPL
+  Copyright Steven G. Johnson, Daniel Richard G.
   Copyright Francesco Salvestrini FSF
   Copyright Andrew Collier FSF
   Copyright 2002, 2003, 2004 SuSE Linux AG, Germany
