Improve copyright detection more
Empty lines can stop a notice continuity.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/misco4/linux2/designer.txt.yml
+++ b/tests/cluecode/data/copyrights/misco4/linux2/designer.txt.yml
@@ -3,6 +3,6 @@ what:
   - holders
   - authors
 copyrights:
-  - Copyright (c) IBM Corporation, 2011-2015
+  - Copyright (c) IBM Corporation, 2011-2015 Designer of the Power
 holders:
-  - IBM Corporation
+  - IBM Corporation, Designer of the Power
