--- a/tests/cluecode/data/copyrights/misco4/linux5/suseag.txt.yml
+++ b/tests/cluecode/data/copyrights/misco4/linux5/suseag.txt.yml
@@ -3,6 +3,6 @@ what:
   - holders
   - authors
 copyrights:
-  - Copyright (c) 2009 Wing Linux
+  - Copyright (c) 2003, 2006 SuSE Linux AG.
 holders:
-  - Wing Linux
+  - SuSE Linux AG.
