--- a/tests/cluecode/data/ics/guava/guava.ipr.yml
+++ b/tests/cluecode/data/ics/guava/guava.ipr.yml
@@ -2,6 +2,6 @@ what:
   - copyrights
   - holders
 copyrights:
-  - Copyright (c) & 36 today.year Google Inc.
+  - Copyright (c) today.year Google Inc.
 holders:
   - Google Inc.
