Improve copyright detection
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/authors/hdp.c.yml
+++ b/tests/cluecode/data/authors/hdp.c.yml
@@ -3,4 +3,4 @@ what:
   - authors_summary
   - copyrights
 copyrights:
-  - Copyright (c) 2010 GSyC/LibreSoft, Universidad Rey Juan Carlos. Authors Santiago Carot Nemesio at gmail.com
+  - Copyright (c) 2010 GSyC/LibreSoft, Universidad Rey Juan Carlos. Authors Santiago Carot Nemesio
