--- a/tests/cluecode/data/copyrights/misco4/linux3/rewrited.txt.yml
+++ b/tests/cluecode/data/copyrights/misco4/linux3/rewrited.txt.yml
@@ -3,8 +3,7 @@ what:
   - holders
   - authors
 copyrights:
-  - Russ Dill <Russ.Dill@asu.edu> 2001-2003
-  - Vladimir Oleynik <dzo@simtreas.ru> (c) 2003
+  - Russ Dill <Russ.Dill@asu.edu> 2001-2003 Rewrited by Vladimir Oleynik <dzo@simtreas.ru> (c)
+    2003
 holders:
-  - Russ Dill
-  - Vladimir Oleynik <dzo@simtreas.ru>
+  - Russ Dill Rewrited by Vladimir Oleynik
