--- a/tests/cluecode/data/copyrights/misco2/copyrighted-complex.txt.yml
+++ b/tests/cluecode/data/copyrights/misco2/copyrighted-complex.txt.yml
@@ -4,9 +4,9 @@ what:
   - holders_summary
   - authors
 copyrights:
-  - copyrighted by http://www.dre.vanderbilt.edu/~schmidt/ Douglas C. Schmidt and his http://www.cs.wustl.edu/~schmidt/ACE-members.html'
-    research group at http://www.wustl.edu/ Washington University, http://www.uci.edu' University
-    of California, Irvine, and http://www.vanderbilt.edu' Vanderbilt University, Copyright (c)
+  - copyrighted by http://www.dre.vanderbilt.edu/~schmidt/ Douglas C. Schmidt and his http://www.cs.wustl.edu/~schmidt/ACE-members.html
+    research group at http://www.wustl.edu/ Washington University, http://www.uci.edu University
+    of California, Irvine, and http://www.vanderbilt.edu Vanderbilt University, Copyright (c)
     1993-2009
 holders:
   - Douglas C. Schmidt and his research group at Washington University, University of California,
