--- a/tests/cluecode/data/copyrights/misco3/complex-multiline-copyright.txt.yml
+++ b/tests/cluecode/data/copyrights/misco3/complex-multiline-copyright.txt.yml
@@ -4,15 +4,11 @@ what:
   - holders_summary
   - authors
 copyrights:
-  - Copyright (c) 2016-2020 Alexey Svetliakov <https://github.com/asvetliakov> , snerks <https://github.com/snerks>
-    , Krzysztof Cebula <https://github.com/Havret> , Vitaliy Polyanskiy <https://github.com/alreadyExisted>
-    , James Lismore <https://github.com/jlismore> , Stack Builders <https://github.com/stackbuilders>
-    , Esteban Ibarra <https://github.com/ibarrae> , Dominic Lee <https://github.com/dominictwlee>
-    , Dave Vedder <https://github.com/veddermatic> , Alec Flett <https://github.com/alecf>
+  - Copyright (c) 2016-2020 Alexey Svetliakov https://github.com/asvetliakov , snerks https://github.com/snerks,
+    Krzysztof Cebula https://github.com/Havret, Vitaliy Polyanskiy https://github.com/alreadyExisted
+    , James Lismore https://github.com/jlismore
 holders:
-  - Alexey Svetliakov , snerks , Krzysztof Cebula , Vitaliy Polyanskiy , James Lismore , Stack
-    Builders , Esteban Ibarra , Dominic Lee , Dave Vedder , Alec Flett
+  - Alexey Svetliakov , snerks Krzysztof Cebula Vitaliy Polyanskiy , James Lismore
 holders_summary:
-  - value: Alexey Svetliakov , snerks , Krzysztof Cebula , Vitaliy Polyanskiy , James Lismore
-      , Stack Builders , Esteban Ibarra , Dominic Lee , Dave Vedder , Alec Flett
+  - value: Alexey Svetliakov , snerks Krzysztof Cebula Vitaliy Polyanskiy , James Lismore
     count: 1
