--- a/tests/cluecode/data/copyrights/name_before_c-c.c.yml
+++ b/tests/cluecode/data/copyrights/name_before_c-c.c.yml
@@ -3,13 +3,10 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Russ Dill <Russ.Dill@asu.edu> 2001-2003
-  - Vladimir Oleynik <dzo@simtreas.ru> (c) 2003
+  - Russ Dill <Russ.Dill@asu.edu> 2001-2003 Rewrited by Vladimir Oleynik <dzo@simtreas.ru> (c)
+    2003
 holders:
-  - Russ Dill
-  - Vladimir Oleynik <dzo@simtreas.ru>
+  - Russ Dill Rewrited by Vladimir Oleynik
 holders_summary:
-  - value: Russ Dill
-    count: 1
-  - value: Vladimir Oleynik <dzo@simtreas.ru>
+  - value: Russ Dill Rewrited by Vladimir Oleynik
     count: 1
