--- a/tests/cluecode/data/copyrights/with_trailing_words.js.yml
+++ b/tests/cluecode/data/copyrights/with_trailing_words.js.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright 2012-2015 The Dojo Foundation <http://dojofoundation.org/>
+  - Copyright 2012-2015 The Dojo Foundation http://dojofoundation.org
   - Copyright 2009-2015 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
   - Copyright 2009-2015 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
   - Copyright 2009-2015 Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
