--- a/tests/cluecode/data/ics/libvpx-examples-includes-PHP-SmartyPants-1.5.1e/PHP_SmartyPants_Readme.txt.yml
+++ b/tests/cluecode/data/ics/libvpx-examples-includes-PHP-SmartyPants-1.5.1e/PHP_SmartyPants_Readme.txt.yml
@@ -3,8 +3,8 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 2005 Michel Fortin <http://www.michelf.com/>
-  - Copyright (c) 2003-2004 John Gruber <http://daringfireball.net/>
+  - Copyright (c) 2005 Michel Fortin http://www.michelf.com
+  - Copyright (c) 2003-2004 John Gruber http://daringfireball.net
 holders:
   - Michel Fortin
   - John Gruber
