Update tests for copyright with URLs
We now drop leading <> around a URL

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcrypt1/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcrypt1/copyright-detailed.expected.yml
@@ -494,6 +494,7 @@ copyright: |
   Copyright Juniper Networks, Inc.
   Copyright Bjorn Esser
   Copyright Zack Weinberg and Free Software Foundation, Inc
+  Copyright vt at altlinux.org
   Copyright Kevin Cernekee FSF
   Copyright Maarten Bosmans FSF
   Copyright Guido U. Draheim, Maarten Bosmans FSF
