--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgcrypt20/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgcrypt20/copyright-detailed.expected.yml
@@ -1,14 +1,14 @@
 declared_license:
 declared_license_expression: gpl-2.0-plus AND other-permissive AND public-domain AND fsf-unlimited-no-warranty
-  AND (lgpl-2.1-plus AND gpl-2.0-plus) AND (lgpl-2.0-plus AND gpl-2.0-plus) AND lgpl-2.0-plus
-  AND lgpl-2.1-plus AND gpl-1.0-plus AND gpl-2.0-plus AND (other-permissive AND other-copyleft)
-  AND bsd-new AND bsd-new AND (bsd-new OR gpl-1.0-plus) AND x11-xconsortium AND public-domain
-  AND public-domain AND ocb-open-source-2013 AND ocb-open-source-2013 AND ocb-open-source-2013
-  AND ocb-open-source-2013 AND gpl-2.0
+  AND (lgpl-2.1-plus AND gpl-2.0-plus) AND (lgpl-2.0-plus AND gpl-2.0-plus) AND lgpl-2.1-plus
+  AND gpl-1.0-plus AND gpl-2.0-plus AND (other-permissive AND other-copyleft) AND bsd-new AND
+  bsd-new AND (bsd-new OR gpl-1.0-plus) AND x11-xconsortium AND public-domain AND public-domain
+  AND ocb-open-source-2013 AND ocb-open-source-2013 AND ocb-open-source-2013 AND ocb-open-source-2013
+  AND gpl-2.0
 declared_license_expression_spdx: GPL-2.0-or-later AND LicenseRef-scancode-other-permissive
   AND LicenseRef-scancode-public-domain AND FSFULLRWD AND (LGPL-2.1-or-later AND GPL-2.0-or-later)
-  AND (LGPL-2.0-or-later AND GPL-2.0-or-later) AND LGPL-2.0-or-later AND LGPL-2.1-or-later AND
-  GPL-1.0-or-later AND GPL-2.0-or-later AND (LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft)
+  AND (LGPL-2.0-or-later AND GPL-2.0-or-later) AND LGPL-2.1-or-later AND GPL-1.0-or-later AND
+  GPL-2.0-or-later AND (LicenseRef-scancode-other-permissive AND LicenseRef-scancode-other-copyleft)
   AND BSD-3-Clause AND BSD-3-Clause AND (BSD-3-Clause OR GPL-1.0-or-later) AND X11 AND LicenseRef-scancode-public-domain
   AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-ocb-open-source-2013 AND LicenseRef-scancode-ocb-open-source-2013
   AND LicenseRef-scancode-ocb-open-source-2013 AND LicenseRef-scancode-ocb-open-source-2013
@@ -17,10 +17,10 @@ other_license_expression:
 other_license_expression_spdx:
 license_detections:
   - license_expression: gpl-2.0-plus AND other-permissive AND public-domain AND fsf-unlimited-no-warranty
-      AND (lgpl-2.1-plus AND gpl-2.0-plus) AND (lgpl-2.0-plus AND gpl-2.0-plus) AND lgpl-2.0-plus
+      AND (lgpl-2.1-plus AND gpl-2.0-plus) AND (lgpl-2.0-plus AND gpl-2.0-plus)
     license_expression_spdx: GPL-2.0-or-later AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-public-domain
       AND FSFULLRWD AND (LGPL-2.1-or-later AND GPL-2.0-or-later) AND (LGPL-2.0-or-later AND
-      GPL-2.0-or-later) AND LGPL-2.0-or-later
+      GPL-2.0-or-later)
     matches:
       - license_expression: gpl-2.0-plus
         spdx_license_expression: GPL-2.0-or-later
@@ -32,8 +32,8 @@ license_detections:
         matched_length: 8
         match_coverage: '100.0'
         rule_relevance: 100
-        rule_identifier: gpl-2.0-plus_1130.RULE
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-2.0-plus_1130.RULE
+        rule_identifier: gpl-2.0-plus_11301.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-2.0-plus_11301.RULE
         matched_text: |
           taken from the
           original NTT provided GPL source.
@@ -136,20 +136,7 @@ license_detections:
               less to protect the freedom of the users of the code that it
               covers.  See http://www.gnu.org/philosophy/why-not-lgpl.html for
               more explanation.
-      - license_expression: lgpl-2.0-plus
-        spdx_license_expression: LGPL-2.0-or-later
-        from_file:
-        start_line: 262
-        end_line: 262
-        matcher: 2-aho
-        score: '100.0'
-        matched_length: 6
-        match_coverage: '100.0'
-        rule_relevance: 100
-        rule_identifier: lgpl-2.0-plus_467.RULE
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/lgpl-2.0-plus_467.RULE
-        matched_text: the license headers of the LGPL
-    identifier: gpl_2_0_plus_and_other_permissive_and_public_domain_and_fsf_unlimited_no_warranty_and__lgpl_2_1_plus_and_gpl_2_0_plus__and__lgpl_2_0_plus_and_gpl_2_0_plus__and_lgpl_2_0_plus-6359b4f1-d70d-80e3-139e-2ba62f0fe9a8
+    identifier: gpl_2_0_plus_and_other_permissive_and_public_domain_and_fsf_unlimited_no_warranty_and__lgpl_2_1_plus_and_gpl_2_0_plus__and__lgpl_2_0_plus_and_gpl_2_0_plus-be7f4a34-02e4-4203-9dd6-a581178f6ca1
   - license_expression: lgpl-2.1-plus AND gpl-1.0-plus
     license_expression_spdx: LGPL-2.1-or-later AND GPL-1.0-or-later
     matches:
