--- a/tests/licensedcode/data/datadriven/lic3/multiple_and_training_bsd.html.yml
+++ b/tests/licensedcode/data/datadriven/lic3/multiple_and_training_bsd.html.yml
@@ -1,5 +1,8 @@
 license_expressions:
   - mpl-1.1 OR gpl-2.0-plus OR lgpl-2.1-plus
   - lgpl-2.1-plus
+  - lgpl-2.1-plus
+  - lgpl-2.1-plus
+  - other-copyleft
   - bsd-new
   - bsd-new
