--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtasn1-6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtasn1-6/copyright-detailed.expected.yml
@@ -69,14 +69,14 @@ license_detections:
         spdx_license_expression: GPL-3.0-or-later
         from_file:
         start_line: 50
-        end_line: 70
-        matcher: 3-seq
-        score: '85.91'
+        end_line: 66
+        matcher: 2-aho
+        score: '100.0'
         matched_length: 128
-        match_coverage: '85.91'
+        match_coverage: '100.0'
         rule_relevance: 100
-        rule_identifier: gpl-3.0-plus_417.RULE
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-3.0-plus_417.RULE
+        rule_identifier: gpl-3.0-plus_288.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-3.0-plus_288.RULE
         matched_text: |
           This program is free software: you can redistribute it and/or modify
            * it under the terms of the GNU General Public License as published by
@@ -95,10 +95,6 @@ license_detections:
 
           On Debian GNU/Linux systems, the complete text of the GNU General Public
           License version 3 can be found in /usr/share/common-licenses/GPL-3.
-
-
-          The documentation is distributed under the terms of the GNU Free
-          Documentation License (
       - license_expression: gfdl-1.3
         spdx_license_expression: GFDL-1.3-only
         from_file:
@@ -137,7 +133,7 @@ license_detections:
 
           On Debian systems a copy of the complete text of the GNU FDL 1.3
           can be found in /usr/share/common-licenses/GFDL-1.3.
-    identifier: gpl_3_0_plus_and_gfdl_1_3_and_gfdl_1_3_plus-20aaaa92-d02e-2c2d-0615-d69acc5b00d5
+    identifier: gpl_3_0_plus_and_gfdl_1_3_and_gfdl_1_3_plus-ca4df800-141f-5c15-72b1-19b8df01217e
 other_license_detections: []
 copyright: |
   Copyright (c) 2000-2020 Free Software Foundation, Inc.
