--- a/tests/formattedcode/data/common/manifests-expected.yaml
+++ b/tests/formattedcode/data/common/manifests-expected.yaml
@@ -29,10 +29,10 @@ headers:
       system_environment:
         operating_system: linux
         cpu_architecture: 64
-        platform: Linux-5.15.0-119-generic-x86_64-with-glibc2.35
-        platform_version: '#129-Ubuntu SMP Fri Aug 2 19:25:20 UTC 2024'
-        python_version: 3.10.12 (main, Jul 29 2024, 16:56:48) [GCC 11.4.0]
-      spdx_license_list_version: '3.24'
+        platform: Linux-6.8.0-45-generic-x86_64-with-glibc2.35
+        platform_version: '#45~22.04.1-Ubuntu SMP PREEMPT_DYNAMIC Wed Sep 11 15:25:05 UTC 2'
+        python_version: 3.11.8 (main, Feb 12 2024, 14:25:06) [GCC 11.4.0]
+      spdx_license_list_version: '3.25'
       files_count: 4
 summary:
   declared_license_expression: apache-2.0 AND cddl-1.0 AND lgpl-3.0 AND mit
@@ -735,21 +735,42 @@ license_detections:
   - identifier: apache_2_0-d66ab77d-a5cc-7104-e702-dc7df61fe9e8
     license_expression: apache-2.0
     license_expression_spdx: Apache-2.0
-    detection_count: 3
+    detection_count: 2
     reference_matches:
       - license_expression: apache-2.0
         license_expression_spdx: Apache-2.0
         from_file: manifests/npm-license-mapping/package.json
-        start_line: 20
-        end_line: 20
-        matcher: 2-aho
+        start_line: 1
+        end_line: 1
+        matcher: 1-hash
         score: '100.0'
         matched_length: 3
         match_coverage: '100.0'
         rule_relevance: 100
         rule_identifier: spdx_license_id_apache-2.0_for_apache-2.0.RULE
         rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/spdx_license_id_apache-2.0_for_apache-2.0.RULE
-        matched_text: '        "type": "Apache 2.0",'
+        matched_text: Apache-2.0
+  - identifier: apache_2_0-0d7a2023-aae9-2989-7f00-27b713b809bb
+    license_expression: apache-2.0
+    license_expression_spdx: Apache-2.0
+    detection_count: 1
+    reference_matches:
+      - license_expression: apache-2.0
+        license_expression_spdx: Apache-2.0
+        from_file: manifests/npm-license-mapping/package.json
+        start_line: 18
+        end_line: 20
+        matcher: 2-aho
+        score: '100.0'
+        matched_length: 5
+        match_coverage: '100.0'
+        rule_relevance: 100
+        rule_identifier: apache-2.0_required_phrase_7.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/apache-2.0_required_phrase_7.RULE
+        matched_text: |
+          "licenses": [
+            {
+              "type": "Apache 2.0",
   - identifier: apache_2_0-ec759ae0-ea5a-f138-793e-388520e080c0
     license_expression: apache-2.0
     license_expression_spdx: Apache-2.0
@@ -1399,7 +1420,7 @@ license_references:
     minimum_coverage: '0'
     standard_notice:
     ignorable_copyrights:
-      - Copyright (c) 2007 Free Software Foundation, Inc. <https://fsf.org/>
+      - Copyright (c) 2007 Free Software Foundation, Inc. https://fsf.org
     ignorable_holders:
       - Free Software Foundation, Inc.
     ignorable_authors: []
@@ -1601,7 +1622,7 @@ license_rule_references:
     is_license_tag: yes
     is_license_intro: no
     is_license_clue: no
-    is_required_phrase: no
+    is_required_phrase: yes
     skip_for_required_phrase_generation: no
     is_continuous: no
     is_builtin: yes
@@ -1617,7 +1638,37 @@ license_rule_references:
     ignorable_authors: []
     ignorable_urls: []
     ignorable_emails: []
-    text: 'license: Apache-2.0'
+    text: license="Apache-2.0
+  - license_expression: apache-2.0
+    identifier: apache-2.0_required_phrase_7.RULE
+    language: en
+    rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/apache-2.0_required_phrase_7.RULE
+    is_license_text: no
+    is_license_notice: no
+    is_license_reference: no
+    is_license_tag: yes
+    is_license_intro: no
+    is_license_clue: no
+    is_required_phrase: yes
+    skip_for_required_phrase_generation: no
+    is_continuous: no
+    is_builtin: yes
+    is_from_license: no
+    is_synthetic: no
+    length: 5
+    relevance: 100
+    minimum_coverage: 80
+    referenced_filenames: []
+    notes:
+    ignorable_copyrights: []
+    ignorable_holders: []
+    ignorable_authors: []
+    ignorable_urls: []
+    ignorable_emails: []
+    text: |
+      "licenses": [
+         {
+           "type": "Apache-2.0
   - license_expression: cddl-1.0
     identifier: cddl-1.0.RULE
     language: en
@@ -1915,7 +1966,7 @@ license_rule_references:
     is_license_tag: no
     is_license_intro: no
     is_license_clue: no
-    is_required_phrase: no
+    is_required_phrase: yes
     skip_for_required_phrase_generation: no
     is_continuous: no
     is_builtin: yes
@@ -1931,7 +1982,7 @@ license_rule_references:
     ignorable_authors: []
     ignorable_urls: []
     ignorable_emails: []
-    text: apache-2.0
+    text: Apache-2.0
 files:
   - path: manifests
     type: directory
@@ -2440,19 +2491,22 @@ files:
           - license_expression: apache-2.0
             spdx_license_expression: Apache-2.0
             from_file: manifests/npm-license-mapping/package.json
-            start_line: 20
+            start_line: 18
             end_line: 20
             matcher: 2-aho
             score: '100.0'
-            matched_length: 3
+            matched_length: 5
             match_coverage: '100.0'
             rule_relevance: 100
-            rule_identifier: spdx_license_id_apache-2.0_for_apache-2.0.RULE
-            rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/spdx_license_id_apache-2.0_for_apache-2.0.RULE
-            matched_text: '        "type": "Apache 2.0",'
-        identifier: apache_2_0-d66ab77d-a5cc-7104-e702-dc7df61fe9e8
+            rule_identifier: apache-2.0_required_phrase_7.RULE
+            rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/apache-2.0_required_phrase_7.RULE
+            matched_text: |
+              "licenses": [
+                {
+                  "type": "Apache 2.0",
+        identifier: apache_2_0-0d7a2023-aae9-2989-7f00-27b713b809bb
     license_clues: []
-    percentage_of_license_text: '5.51'
+    percentage_of_license_text: '7.09'
     copyrights: []
     holders: []
     authors:
