--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/findutils/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/findutils/copyright-detailed.expected.yml
@@ -4,21 +4,21 @@ declared_license_expression_spdx: GPL-3.0-or-later AND GFDL-1.3-or-later
 other_license_expression:
 other_license_expression_spdx:
 license_detections:
-  - license_expression: gpl-3.0-plus AND gfdl-1.3-plus
-    license_expression_spdx: GPL-3.0-or-later AND GFDL-1.3-or-later
+  - license_expression: gpl-3.0-plus
+    license_expression_spdx: GPL-3.0-or-later
     matches:
       - license_expression: gpl-3.0-plus
         spdx_license_expression: GPL-3.0-or-later
         from_file:
         start_line: 49
-        end_line: 73
-        matcher: 3-seq
-        score: '87.25'
-        matched_length: 130
-        match_coverage: '87.25'
+        end_line: 64
+        matcher: 2-aho
+        score: '100.0'
+        matched_length: 128
+        match_coverage: '100.0'
         rule_relevance: 100
-        rule_identifier: gpl-3.0-plus_410.RULE
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-3.0-plus_410.RULE
+        rule_identifier: gpl-3.0-plus_288.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-3.0-plus_288.RULE
         matched_text: |
           This program is free software: you can redistribute it and/or modify
              it under the terms of the GNU General Public License as published by
@@ -36,15 +36,10 @@ license_detections:
 
           On Debian GNU/Linux systems, the complete text of the GNU General
           Public License version 3 can be found in `/usr/share/common-licenses/GPL-3'.
-
-          =============================================
-          DOCUMENTATION
-          ----------------------------
-          Copyright (C) 1994-2021 Free Software Foundation, Inc.
-
-          Permission is granted to copy, distribute and/or modify this
-          document under the terms of the GNU Free Documentation License,
-          Version
+    identifier: gpl_3_0_plus-5d3fc7ee-d4a6-e758-e035-959d5625a475
+  - license_expression: gfdl-1.3-plus
+    license_expression_spdx: GFDL-1.3-or-later
+    matches:
       - license_expression: gfdl-1.3-plus
         spdx_license_expression: GFDL-1.3-or-later
         from_file:
@@ -69,7 +64,7 @@ license_detections:
 
           On Debian GNU/Linux systems, the complete text of the GNU Free Documentation
           License, Version 1.3 can be found in `/usr/share/common-licenses/GFDL-1.3'.
-    identifier: gpl_3_0_plus_and_gfdl_1_3_plus-4e26323e-8ec7-12c7-944f-000d6284f4bd
+    identifier: gfdl_1_3_plus-3948eb51-a2cd-b4ad-a354-c56c2289470f
 other_license_detections: []
 copyright: |
   Copyright (c) 1990-2021 Free Software Foundation, Inc.
