Improve license detection results
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/external/licensecheck/fedora/MIT.yml
+++ b/tests/licensedcode/data/datadriven/external/licensecheck/fedora/MIT.yml
@@ -24,7 +24,7 @@ license_expressions:
   - mpich
   - freetts
   - other-permissive
-  - warranty-disclaimer
+  - other-permissive
   - mozilla-gc
   - adobe-glyph
   - mit-xfig
