--- a/tests/licensedcode/data/datadriven/lic1/gpl-2.0-plus_33.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic1/gpl-2.0-plus_33.txt.yml
@@ -1,4 +1,8 @@
 license_expressions:
   - gpl-2.0-plus
+  - gpl-1.0-plus
   - gpl-2.0-plus
+  - gpl-1.0-plus
+  - gpl-1.0-plus
+  - gpl-1.0-plus
 notes: spurrious PHP license
