--- a/tests/formattedcode/data/common/manifests-expected.yaml
+++ b/tests/formattedcode/data/common/manifests-expected.yaml
@@ -1807,7 +1807,7 @@ license_rule_references:
     ignorable_emails: []
     text: |
       This library is free software; you can redistribute it and/or modify it under
-      the terms of the GNU Lesser General Public License version 3.0 as published
+      the terms of the {{GNU Lesser General Public License version 3.0}} as published
       by the Free Software Foundation.
 
       This library is distributed in the hope that it will be useful, but WITHOUT
