--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Software Development
     Topic :: Utilities
 
@@ -85,7 +86,7 @@ install_requires =
     jinja2 >= 2.7.0
     jsonstreams >= 0.5.0
     license_expression >= 30.1.1
-    lxml >= 4.9.2
+    lxml >= 5.3.0
     MarkupSafe >= 2.1.2
     packageurl_python >= 0.9.0
     packvers >= 21.0.0
