--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,7 +123,7 @@ jobs:
           job_name: ubuntu20_cpython
           image_name: ubuntu-20.04
           python_architecture: x64
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py --reruns 2
 
@@ -132,7 +132,7 @@ jobs:
           job_name: ubuntu22_cpython
           image_name: ubuntu-22.04
           python_architecture: x64
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py --reruns 2
 
@@ -140,7 +140,7 @@ jobs:
       parameters:
           job_name: macos12_cpython
           image_name: macOS-12
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           python_architecture: x64
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py --reruns 2
@@ -149,7 +149,7 @@ jobs:
       parameters:
           job_name: macos13_cpython
           image_name: macOS-13
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py --reruns 2
 
@@ -167,7 +167,7 @@ jobs:
           job_name: win2022_cpython
           image_name: windows-2022
           python_architecture: x64
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs tests\scancode\test_cli.py --reruns 2
 
@@ -184,7 +184,7 @@ jobs:
       parameters:
           job_name: win2022_cpython_2
           image_name: windows-2022
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           python_architecture: x64
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs tests\scancode\test_cli.py --reruns 2
@@ -199,15 +199,15 @@ jobs:
       parameters:
           job_name: ubuntu20_test_all_supported_click_versions
           image_name: ubuntu-20.04
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           python_architecture: x64
           test_suites:
               click_versions: |
-                for clk_ver in 8.1.3 8.1.2 8.1.1 8.1.0 8.0.4 8.0.3 8.0.2 8.0.1 7.1.2 7.1.1 7.1 6.7; 
+                for clk_ver in 8.1.3 8.1.2 8.1.1 8.1.0 8.0.4 8.0.3 8.0.2 8.0.1 7.1.2 7.1.1 7.1 6.7;
                  do
                   venv/bin/pip install click==$clk_ver;
-                  venv/bin/scancode -i samples/ -n3 --json foo.json; 
-                  venv/bin/scancode -i --verbose samples/ -n3 --json foo.json; 
+                  venv/bin/scancode -i samples/ -n3 --json foo.json;
+                  venv/bin/scancode -i --verbose samples/ -n3 --json foo.json;
                  done
 
 
@@ -219,7 +219,7 @@ jobs:
       parameters:
           job_name: ubuntu22_cpython_latest_from_pip
           image_name: ubuntu-22.04
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
@@ -227,15 +227,15 @@ jobs:
       parameters:
           job_name: ubuntu20_cpython_latest_from_pip
           image_name: ubuntu-20.04
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
-  
+
     - template: etc/ci/azure-posix.yml
       parameters:
           job_name: macos12_cpython_latest_from_pip
           image_name: macos-12
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
@@ -243,7 +243,7 @@ jobs:
       parameters:
           job_name: macos13_cpython_latest_from_pip
           image_name: macos-13
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
@@ -251,7 +251,7 @@ jobs:
       parameters:
           job_name: win2019_cpython_latest_from_pip
           image_name: windows-2019
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv\Scripts\pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] &&  venv\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
 
@@ -259,7 +259,7 @@ jobs:
       parameters:
           job_name: win2022_cpython_latest_from_pip
           image_name: windows-2022
-          python_versions: ['3.9', '3.10', '3.11', '3.12']
+          python_versions: ['3.9', '3.10', '3.11', '3.12', '3.13']
           test_suites:
               all: venv\Scripts\pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[testing] &&  venv\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
 
