--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 aboutcode-toolkit==7.0.2
 black==22.6.0
 bleach==5.0.1
-build==0.7.0
+build==1.2.2.post1
 commonmark==0.9.1
 docutils==0.19
 et-xmlfile==1.1.0
